[package]
name = "ghosted"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = {version = "0.30.0", features = ["all-widgets"]}
crossterm = "0.29"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.44", features = ["serde"] }
directories = "6.0"

